# Launcher-Pro

./: CMakeLists.txt  README.md  build_guaranteed.sh  check_deps.sh
.github/workflows/: cmake.yml
config/: default.ini
core/: Application.cpp  Application.h  Global.h  Logger.cpp  Logger.h  Settings.cpp  Settings.h  Singleton.h
database/: DatabaseManager.cpp  DatabaseManager.h  LauncherDatabase.cpp  LauncherDatabase.h  UniversalDatabaseManager.h
database/models/: Character.cpp  Character.h  Message.h  User.cpp  User.h
modules/admin/: AdminModule.cpp  AdminModule.h
modules/base/: ModuleInterface.h  ModuleManager.h
modules/events/: EventsModule.cpp  EventsModule.h
modules/expansion/: ExpansionManager.cpp  ExpansionSelector.h
modules/social/: SocialModule.cpp  SocialModule.h
modules/stats/: StatsModule.cpp  StatsModule.h
modules/store/: StoreModule.cpp  StoreModule.h
modules/tools/: GearPlanner.h  NotificationSystem.h  SmartPatcher.h  TalentCalculator.h  ToolsModule.cpp  ToolsModule.h
network/: ApiClient.cpp  ApiClient.h  WebSocketClient.cpp  WebSocketClient.h
resources/: resources.qrc
resources/images/: images.md
resources/styles/: theme_battlenet.qss
scripts/: LauncherDatabase.sql  build.bat  build.sh  build_simple.sh  complete_setup.sql  install_minimal.sql  install_thundercore.sh
src/: main.cpp
ui/: DashboardWindow.cpp  DashboardWindow.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  ModuleManager.h
ui/widgets/: AdminPanel.h  MainDashboard.h  ThemeManager.h
utils/: FileUtils.cpp  FileUtils.h
